feat (views): create tasker-log page

--- a/app/views/task_managements/index.html.erb
+++ b/app/views/task_managements/index.html.erb
@@ -1,4 +1,5 @@
 <main>
+  <%= render "partials/sidebar_dashboard" %>
   <section class="col m9 s12 offset-m1">
     <div class="row">
       <ul class= "col m10 offset-m1" >
