feat(taskee-log): taskee log link
- add taskee log link to dashboard sidebar
- change the title for the taskee log page

[#107791770]

--- a/app/views/task_managements/index.html.erb
+++ b/app/views/task_managements/index.html.erb
@@ -2,7 +2,7 @@
   <%= render "partials/sidebar_dashboard" %>
   <div class="row">
     <section class="col m9 offset-m2">
-      <h2>Tasks logs</h2>
+      <h2>Task logs</h2>
       <% if current_user.user_type == "taskee" %>
           <table>
               <thead>
