--- a/app/views/partials/_sidebar_dashboard.html.erb
+++ b/app/views/partials/_sidebar_dashboard.html.erb
@@ -2,7 +2,7 @@
   <ul>
     <%= link_to raw("<li class='side-nav-button'>Home</li>"), dashboard_path %><hr>
     <%= link_to raw("<li class='side-nav-button'>Edit Profile</li>"), profile_path %><hr>
-    <%= link_to raw("<li class='side-nav-button'>Task Management</li>"), dashboard_path %><hr>
+    <%= link_to raw("<li class='side-nav-button'>Task logs</li>"), my_tasks_path %><hr>
     <%= link_to raw("<li class='side-nav-button'>Account Upgrade</li>"), user_plans_path %><hr>
 <% if current_user.user_type == "tasker"%>
     <%= link_to raw("<li class='side-nav-button'>Map Search</li>"), map_search_path %><hr>
