feat(dashoard view): adjust the position of profile meter text

--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -36,7 +36,7 @@
         <section class="col s6">
 
           <div class="profile-meter">
-            <h5> Complete Your Profile </h5>
+            <h5 class="meter-header"> Complete Your Profile </h5>
             <div class="progress-pie-chart" data-percent="<%= @profile_meter %>">
           <div class="ppc-progress">
             <div class="ppc-progress-fill"></div>
