--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -36,7 +36,6 @@
         <section class="col s6">
 
           <div class="profile-meter">
-            <h5 class="meter-header"> Complete Your Profile </h5>
             <div class="progress-pie-chart" data-percent="<%= @profile_meter %>">
           <div class="ppc-progress">
             <div class="ppc-progress-fill"></div>
@@ -47,6 +46,7 @@
             </div>
           </div>
         </div>
+        <p class="meter-header"><a href="<%= profile_path%>"> Complete Your Profile</a> </p>
           </div>
         </section>
     </div>
