--- a/app/views/task_managements/index.html.erb
+++ b/app/views/task_managements/index.html.erb
@@ -48,14 +48,15 @@
                 <td><%= taskee = "#{user.firstname} #{user.lastname}" %></td>
                 <td><%= desc = task.task_desc %></td>
                 <% details = { num: task.id, task: desc, taskee: taskee, user_id: user.id } %>
-                <td>
                   <% if task.status.downcase == "done" %>
                     <span>Completed</span>
-                  <% else %>
-                    <%= task.status %><br>
-                    <%= link_to "Review", review_task_path(details) %>
+                  <% elsif task.status.downcase == "active" %>
+                      <td><span class="cyan-text"><i class="tiny material-icons">trending_flat</i> <%= task.status.downcase %></span><br>
+                     <%= link_to "Review", review_task_path(details) %></td>
+                  <% elsif task.status.downcase == "inactive" %>
+                      <td><span class="red-text"><i class="tiny material-icons">not_interested</i> <%= task.status.downcase %></span><br>
+                      <%= link_to "Review", review_task_path(details) %></td>
                   <% end %>
-                </td>
               </tr>
               <% serial_no += 1 %>
             <% end %>
