refactor(dashboard controller): change variable names
edit dashboard css

--- a/app/assets/stylesheets/styles/_dashboard.scss
+++ b/app/assets/stylesheets/styles/_dashboard.scss
@@ -15,6 +15,7 @@ nav .nav-wrapper {
   -moz-border-radius: 3em;
   -ms-border-radius: 3em;
   border-radius: 1.5em;
+  margin-left: -10%;
 }
 
 .user-profile {
