--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -36,7 +36,7 @@
         <section class="col s6">
 
           <div class="profile-meter">
-            <div class="progress-pie-chart" data-percent="<%= @profile_meter %>">
+            <div class="progress-pie-chart" data-percent="<%= @completion_percentage %>">
           <div class="ppc-progress">
             <div class="ppc-progress-fill"></div>
           </div>
@@ -46,7 +46,7 @@
             </div>
           </div>
         </div>
-        <p class="meter-header"><a href="<%= profile_path%>"> Complete Your Profile</a> </p>
+        <p class="meter-header"><a href="<%= profile_path %>"> Complete Your Profile</a> </p>
           </div>
         </section>
     </div>
