--- a/app/views/skillsets/_form.html.erb
+++ b/app/views/skillsets/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(Task.new, url: skillsets_path, remote: true) do |f| %>
-  <%= f.text_field :name, placeholder: 'New Skillset' %>
+  <%= f.text_field :name, placeholder: 'New Skillset', required: true %>
   <%= f.submit class: 'btn' do %>
     <span>Add Skillset</span>
   <% end %>
