--- a/app/views/biddings/index.html.erb
+++ b/app/views/biddings/index.html.erb
@@ -1,14 +1,27 @@
 <%= render 'partials/sidebar_dashboard' %>
 <section class="main container">
   <div class="row">
-    <div class="col m10 offset-m1">
+    <div class="col m12">
       <div class="row">
-        <div class="col m5 offset-m1">
-          <h2>New Bid</h2>
-          <%= render 'form' %>
-        </div>
-        <div class="col m5 offset-m1">
+        <div class="col m7 offset-m1">
           <h1>Bids</h1>
+          <table>
+            <thead>
+              <tr>
+                  <th data-field="id">Task</th>
+                  <th data-field="description">Description</th>
+                  <th data-field="price-range">Price Range</th>
+              </tr>
+            </thead>
+            <tbody>
+             <%= render @biddings %>
+            </tbody>
+            </table>
+        </div>
+        <div class="col m3 offset-m1">
+          <%= link_to new_bidding_path, class: 'btn-floating btn-large waves-effect waves-light red', id: 'new-bid-btn' do %>
+            <i class="material-icons">add</i>
+          <% end %>
         </div>
       </div>
     </div>
