--- a/app/views/biddings/new.html.erb
+++ b/app/views/biddings/new.html.erb
@@ -1,13 +1,23 @@
 <%= render 'partials/sidebar_dashboard' %>
 <section class="main container">
-  <div class="row">
-    <div class="col m12">
-      <div class="row">
-        <div class="col m5 offset-m1">
-          <h2>New Bid</h2>
-          <%= render 'form' %>
+<% if @bidding.errors.any? %>
+ <div id="error_explanation">
+  <h3><%= pluralize(@bidding.errors.count, "error") %></h3>
+  <ul>
+    <% @bidding.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+  </ul>
+ </div>
+<% end %>
+    <div class="row">
+      <div class="col m12">
+        <div class="row">
+          <div class="col m5 offset-m1">
+            <h2>New Bid</h2>
+            <%= render 'form' %>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 </section>
