fix (controllers): correct update action and refactor views

--- a/app/views/biddings/_bidding.html.erb
+++ b/app/views/biddings/_bidding.html.erb
@@ -2,4 +2,6 @@
   <td><%= bidding.task.name %></td>
   <td><%= bidding.description %></td>
   <td><%= bidding.price_range %></td>
+  <td><%= link_to("Edit", edit_bidding_path(bidding)) %></td>
+  <td><%= link_to("delete", bidding_path(bidding), method: :delete) %></td>
 </tr>
