chore(notifications): update styling for notifications
- Update css for the accept/reject box in the notifications page

[#118838707]

--- a/app/assets/stylesheets/styles/_dashboard.scss
+++ b/app/assets/stylesheets/styles/_dashboard.scss
@@ -201,6 +201,7 @@ nav .nav-wrapper {
   .actions {
     @include display(flex);
     @include justify-content(space-around);
+    padding: 15px 0;
 
     .btn > .material-icons {
       pointer-events: none;
