test(create bid): add feature test
[#119652541]

--- a/app/views/biddings/index.html.erb
+++ b/app/views/biddings/index.html.erb
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col m7 offset-m1">
           <h1>Bids</h1>
-          <table>
+          <table id="bids-table">
             <thead>
               <tr>
                   <th data-field="id">Task</th>
