--- a/app/views/biddings/_bidding.html.erb
+++ b/app/views/biddings/_bidding.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><%= bidding.task.name %></td>
+  <td><%= bidding.name %></td>
   <td><%= bidding.description %></td>
   <td><%= bidding.price_range %></td>
   <td><%= link_to("Edit", edit_bidding_path(bidding)) %></td>
