--- a/app/assets/stylesheets/styles/_biddings.scss
+++ b/app/assets/stylesheets/styles/_biddings.scss
@@ -1,4 +1,18 @@
+.inline {
+  display: inline-block;
+}
+
 #new-bid-btn {
-  margin-top: 3rem;
-  margin-left: 1rem;
+  margin-bottom: 1.5rem;
+  margin-left: 33rem;
+}
+
+.pagination a li.active {
+  color: #fff;
+}
+
+.pagination {
+  .waves-effect {
+    vertical-align: inherit !important;
+  }
 }
