--- a/app/views/biddings/index.html.erb
+++ b/app/views/biddings/index.html.erb
@@ -3,8 +3,12 @@
   <div class="row">
     <div class="col m12">
       <div class="row">
-        <div class="col m7 offset-m1">
-          <h1>Bids</h1>
+        <div class="col m8 offset-m1">
+          <h1 class="inline">Bids</h1>
+          <%= link_to new_bidding_path, class: 'btn-floating btn-large waves-effect waves-light red tooltipped',
+            id: 'new-bid-btn', "data-position": "left", "data-delay": "50", "data-tooltip": "Add new bid" do %>
+            <i class="material-icons">add</i>
+          <% end %>
           <table id="bids-table">
             <thead>
               <tr>
@@ -18,11 +22,6 @@
             </tbody>
             </table>
             <%= will_paginate @biddings %>
-        </div>
-        <div class="col m3 offset-m1">
-          <%= link_to new_bidding_path, class: 'btn-floating btn-large waves-effect waves-light red', id: 'new-bid-btn' do %>
-            <i class="material-icons">add</i>
-          <% end %>
         </div>
       </div>
     </div>
