fix(google-oauth): fix google signin
Fix the Google oauth signin.

[#120271719]

--- a/app/assets/stylesheets/styles/_users.scss
+++ b/app/assets/stylesheets/styles/_users.scss
@@ -130,6 +130,10 @@
 
       &.btn-goog {
         background-color: #eb4436;
+
+        .fa {
+          color: #FFFFFF;
+        }
       }
     }
   }
