feat(task controller): add new action
[#121138913]

--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -21,7 +21,7 @@
           </li>
 
           <li>
-            <a href="#" class="tooltipped" data-position="left" data-delay="50" data-tooltip="Manage Tasks">
+            <a href="<%= new_task_path %>" class="tooltipped" data-position="left" data-delay="50" data-tooltip="Task Creation">
               <i class="material-icons">rate_review</i>
             </a>
           </li>
