--- a/app/assets/stylesheets/styles/_users.scss
+++ b/app/assets/stylesheets/styles/_users.scss
@@ -115,13 +115,15 @@
       margin-bottom: em(15px);
 
       .fa {
-        border-right: 1px solid #fff;
         padding-right: em(10px);
       }
 
       &.btn-fb {
-        padding-right: em(12px);
         background-color: #47639e;
+
+        .fa {
+          color: #FFFFFF;
+        }
       }
 
       &.btn-twt {
