--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Reviews#index</h1>
-<p>Find me in app/views/reviews/index.html.erb</p>
+<div>
+    <div>
+      <h3>Reviews Given</h3>
+      <%= @reviews.render_reviews("reviews") %>
+
+    </div>
+    <div>
+      <h3>Feedbacks Received</h3>
+      <%= @feedbacks.render_reviews("feedbacks") %>
+    </div>
+</div>
