--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,20 +1,40 @@
+<% if flash.present?  %>
+    <% flash.each do | name | %>
+      <div class="flash-mail">
+        <i class="material-icons close-flash">close</i>
+        <p><%= name.last %></p>
+      </div>
+    <% end %>
+  <% end %>
 <main>
+<% if @review.errors.any? %>
+  <div class="error-explanation center-align">
+    <i class="material-icons">bug_report</i>
+    <p class="error-count">
+      The form contains <%= pluralize(@review.errors.count, "error") %>.
+    </p>
+    <ul>
+    <% @review.errors.full_messages.each do |msg| %>
+      <li>* <%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
   <section class="col m9 s12 offset-m1">
     <div class="row">
       <ul class= "col m10 offset-m1" >
-        <li><strong><%= label_tag "Taskee's name" %></strong><%= text_field_tag("name", params[:taskee], disabled: true) %></li>
 
-        <li><strong><%= label_tag "Task Description" %></strong><%= text_field_tag("description", params[:task], disabled: true ) %></li>
-        <%= form_tag completed_path do %>
+        <%= form_tag reviews_path do %>
         <div class="form-group col-md-3">
-          <%= label_tag(:reviewee_id, reviewee) %>
-          <%= select_tag(:reviewee_id, options_for_select(@users), class: "form-control") %>
-          <% binding.pry %>
+          <%= label_tag(:reviewee_id) %>
+          <%= select_tag(:reviewee_id, options_for_select(@users), include_blank: review_me, class: "form-control", id: "reviewers") %>
         </div>
-        <li><strong><%= label_tag "Add a comment about the taskee or their job:" %></strong></li>
-          <input type="hidden" name= "task_id" value= "<%= params[:num] %>" >
-          <input type="hidden" name= "user_id" value= "<%= params[:user_id] %>" >
-        <li><%= text_area_tag "comment" %></li>
+        <div id="tasks">
+
+        </div>
+        <li><strong><%= label_tag "Add your review here:" %></strong></li>
+
+        <li><%= text_area_tag "review" %></li>
         <li><strong><%= label_tag "Rate taskee" %></strong>
           <div>&nbsp;</div>
             <% 1.upto(5) do |n| %>
@@ -25,7 +45,7 @@
             <% end %>
           <div>&nbsp;</div>
         </li>
-        <li><button class="btn waves-effect" type="submit">Completed</button></li>
+        <li><button class="btn waves-effect" type="submit">Complete Review</button></li>
         <% end %>
       </ul>
     </div>
