feat(assets): add typeaheadjs
[#121138913]

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,4 @@
 @import "styles/search";
 @import "styles/tasks";
 @import "styles/profile_meter";
-@import "styles/biddings"
+@import "styles/biddings";
