--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,1 +1,1 @@
-<h4><%= link_to review.task_management, review_path(review) %> <%= review.reviewee.firstname_and_lastname %></h4>
+<p><%= link_to review.task_management, review_path(review) %> <%= review.reviewee.firstname_and_lastname %></p>
