--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,11 +1,12 @@
-<div>
-    <div>
-      <h3>Reviews Given</h3>
-      <%= @reviews.render_reviews("reviews") %>
-
-    </div>
-    <div>
-      <h3>Feedbacks Received</h3>
-      <%= @feedbacks.render_reviews("feedbacks") %>
-    </div>
+<div class="main">
+<div class="row">
+    <section class = "col s4 offset-s2">
+        <h3>Reviews Given</h3>
+          <%= @reviews.render_reviews("reviews") %>
+    </section>
+      <section class="col s6">
+       <h3>Feedbacks Received</h3>
+        <%= @feedbacks.render_reviews("feedbacks") %>
+    </section>
+</div>
 </div>
