feat (views): begin comment functionality

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,5 +1,5 @@
 <div class="main">
-<div class="row">
+<div class="row valign-wrapper"">
     <section class = "col s4 offset-s2">
         <h3>Reviews Given</h3>
           <%= @reviews.render_reviews("reviews") %>
