--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,8 +1,8 @@
 <main>
-  <!-- <div class="col m4">
+  <div class="col m4">
     <%= render "partials/sidebar_dashboard" %>
-  </div> -->
-  <div class="container ">
+  </div>
+  <div class="container col m8">
     <div class="container">
     <h3>Create New task</h3>
     <div class="col m12">
@@ -12,57 +12,69 @@
           <div class="input-field col m6">
             <i class="material-icons prefix">edit_mode</i>
             <%= f.label :name %>
-            <%= f.text_field :name, class: "form-control" %>
+            <%= f.text_field :name, class: "form-control", :required => true %>
           </div>
         <div class=" input-field col m6">
           <i class="material-icons prefix">credit_card</i>
           <%= f.label :price %>
-          <%= f.text_field :price, class: "form-control" %>
+          <%= f.text_field :price, pattern: "[0-9]+", class: "form-control", :required => true %>
         </div>
         </div>
         <div class="row">
           <div class="input-field col m6">
             <i class="material-icons prefix">perm_contact_calendar</i>
             <%= f.label :start_time%>
-             <%= f.date_field :start_date, class: "datepicker", placeholder: "Start Date", required: true %>
+             <%= f.date_field :start_date, class: "datepicker", placeholder: "Start Date", required: true, :required => true %>
           </div>
           <div class="input-field col m6">
             <i class="material-icons prefix">perm_contact_calendar</i>
             <%= f.label :end_time%>
-             <%= f.date_field :end_date, class: "datepicker", placeholder: "End Date", required: true %>
+             <%= f.date_field :end_date, class: "datepicker", placeholder: "End Date", required: true, :required => true %>
           </div>
         </div>
         <div class="row">
           <div class="input-field col m6">
             <i class="material-icons prefix">schedule</i>
             <%= f.label :time%>
-             <%= f.text_field "time", class: "timepicker", placeholder: "Start Time" %>
+             <%= f.text_field "time", class: "timepicker", placeholder: "Start Time", :required => true %>
           </div>
           <div class="input-field col m6">
             <i class="material-icons prefix">my_location</i>
-            <%= f.label :location%>
-             <%= f.text_field "locaton", class: "form-control" %>
+
+            <label for="location"> Location(street, city) </label>
+             <%= f.text_field "location", class: "form-control" %>
           </div>
         </div>
         <div class="row">
           <div class="input-field col m6">
-             <%= f.text_area "description", class: "form-control", placeholder: "Enter the description of the task here" %>
+             <%= f.text_area "description", class: "form-control", placeholder: "Enter the description of the task here", :required => true %>
           </div>
           <!-- <i class="material-icons prefix">list</i> -->
           <div class="input-field col m5 offset-m1">
             <!-- <i class="material-icons prefix">list</i> -->
-            <%= f.label :skillsets%>
-
-            <input type="text" class="typeahead" name="skillsets" data-role="materialtags"/>
+            <%= f.label :Skillsets%>
+            <!-- <%= f.text_field "skillsets", class: "form-control typeahead", "data-role" => "materialtags" %> -->
+            <input type="text" class="typeahead" name="task[skillsets]" data-role="materialtags"/>
           </div>
 
         </div>
         <div class="row">
-          <div class="col m7 offset-m5">
-            <%= f.submit "Create Task", class: "btn waves-effect waves-light"%>
-            <!-- <button class="btn waves-effect waves-light" type="submit">Submit
+          <div class="col m6">
+             <input name="task[type]" type="radio" id="test1" value="broadcast" required />
+              <label for="test1">Broadcast tis task for bidding</label>
+          </div>
+          <div class="col m6">
+
+            <input name="task[type]" type="radio" id="test2" value="assign" />
+             <label for="test2">Assign This task to a taskee</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="text-center" style="text-align: center">
+            <!-- <%= f.submit "Create Task", class: "btn waves-effect waves-light"%> -->
+            <button class="btn waves-effect waves-light" type="submit">Submit
               <i class="material-icons right">send</i>
-            </button> -->
+            </button>
           </div>
         </div>
         <% end %>
