--- a/app/views/partials/profile_view.html.erb
+++ b/app/views/partials/profile_view.html.erb
@@ -16,7 +16,7 @@
           <% unless current_user.user_type == "taskee" %>
             <% id = "WKDY#{@user.id}"%>
             <% if assign %>
-            <%= link_to "ASSIGN TASK", assign_path(id: @user.id, task_id: task_id), class: "btn waves-effect" %>
+            <%= link_to "ASSIGN TASK", assign_path(taskee_id: @user.id, task_id: task_id), class: "btn waves-effect" %>
             <% else %>
             <%= link_to "ASSIGN TASK", assign_task_path(obfuscate(id: @user.id)), class: "btn waves-effect" %>
             <% end %>
